@@ -1,3 +1,7 @@
+2006-11-14  Philip van Hoof <pvanhoof@gnome.org>
+
+	* libtinymailui-mozembed: fixes for the Gecko support
+
 2006-11-13  Philip van Hoof <pvanhoof@gnome.org>
 
 	* libtinymail-camel/camel-lite: moved some scripts in the configure.ac
